# BMS_v2

./: BMS.m  README.md  bms.py  demo.m  readme.txt
BMS_CODE/: BMS  CMakeLists.txt  makefile
BMS_CODE/src/: BMS.cpp  BMS.h  fileGettor.h  main.cpp
img/: Thumbs.db
